static/src/js/components/Facets/FacetsGroup.scss
.facets-group {
  display: block;
  color: $color__white;

  &__heading {
    margin: 0;
    font-size: 1rem;
  }

  &__button {
    display: flex;
    justify-content: space-between;
    padding: 0.5rem 0.75rem;
    color: $color__white;
    border-radius: 0;
    border-bottom: 1px solid $color__black--700;
    font-size: 0.925rem;
    font-weight: 300;

    .facets-group:last-child & {
      border: 0;
    }

    &:hover {
      color: $color__white;
      background: $color__black--700;
    }

    &:focus {
      outline: 0;
      border-color: transparent;
      border-bottom-color: $color__black--700;
    }
  }

  &__action {
    align-self: flex-end;
    color: $color__black--300;
  }

  &__header {
    display: flex;
    padding: 0.2rem 0.4rem 0.2rem 0.75rem;
  }

  &__meta {
    font-size: 0.8rem;
    color: $color__black--400;
  }

  &__view-all {
    margin-left: auto;
    padding: 0;
    font-size: 0.8rem;
    font-weight: 700;
    color: $color__black--400;
    background: none;
    outline: none;
    border: 0;

    &:focus {
      outline: 0;
    }
  }

  &__body {
    height: 0;
    overflow: hidden;
    background: $color__black--900;

    &:first-child {
      padding-top: 0.6rem;
    }

    &--is-open {
      height: auto;
      border-bottom: 1px solid $color__black--700;
    }
  }
}

